<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<!-- Tycho requires Maven 3 -->
	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<groupId>org.franca</groupId>
	<artifactId>org.franca.parent</artifactId>
	<version>0.8.3-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<eclipse-site>http://download.eclipse.org/releases/${platform-version-name}</eclipse-site>
		<platform-version-name>indigo</platform-version-name>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tycho-version>0.13.0</tycho-version>
		<junit-version>4.8.1</junit-version>
		<slf4j-version>1.6.1</slf4j-version>
	</properties>

    <modules>
    		<!-- actual code modules -->
            <module>../../plugins/org.franca.core</module>
            <module>../../plugins/org.franca.core.dsl</module>
            <module>../../plugins/org.franca.core.dsl.ui</module>
            <module>../../plugins/org.franca.deploymodel.dsl</module>
            <module>../../plugins/org.franca.deploymodel.dsl.ui</module>
			<module>../../plugins/org.franca.generators</module>
            <module>../../plugins/org.franca.connectors.dbus</module>
            <module>../../plugins/org.franca.connectors.dbus.ui</module>
    		<!-- test base modules -->
            <module>../../tests/org.franca.core.dsl.tests.base</module>
            <module>../../tests/org.franca.deploymodel.dsl.tests.base</module>
    		<!-- test modules -->
            <module>../../tests/org.franca.core.dsl.tests</module>
            <module>../../tests/org.franca.deploymodel.dsl.tests</module>
			<!-- release modules -->
            <module>../../features/org.franca.feature</module>
            <module>../../features/org.franca.dbus.feature</module>
			<module>../../releng/org.franca.updatesite</module>
			<!-- 
			   <module>../../docs/org.franca.help</module>
			-->
    </modules>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho-version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho-version}</version>
				<configuration>
					<dependency-resolution>
						<optionalDependencies>ignore</optionalDependencies>
					</dependency-resolution>
					<resolver>p2</resolver>
					<pomDependencies>consider</pomDependencies>
					<environments>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>win32</os>
							<ws>win32</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86_64</arch>
						</environment>
						<environment>
							<os>macosx</os>
							<ws>cocoa</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86</arch>
						</environment>
						<environment>
							<os>linux</os>
							<ws>gtk</ws>
							<arch>x86_64</arch>
						</environment>
					</environments>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<!-- TYCHO -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>UTF-8</encoding>
						<source>6.0</source>
						<target>6.0</target>
					</configuration>
				</plugin>
	      		<plugin>
	      			<groupId>org.eclipse.tycho</groupId>
	      			<artifactId>tycho-packaging-plugin</artifactId>
	      			<version>${tycho-version}</version>
	      			<configuration>
	        			<archiveSite>true</archiveSite>
	      			</configuration>
	    		</plugin>
	      		
				<!-- enable source bundle generation -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>maven-osgi-test-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<!-- APACHE MAVEN PLUGINS -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.4.1</version>
					<configuration>
						<encoding>ISO-8859-1</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>1.3</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.12.2</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.4.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.2-beta-4</version>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<configuration>
						<preparationGoals>clean -DnewVersion=${releaseVersion}
							-Dprudent=true
							org.eclipse.tycho:tycho-versions-plugin:set-version
							verify
							scm:checkin</preparationGoals>
						<arguments>-Prelease</arguments>
					</configuration>
				</plugin>
				<!-- OTHER PLUGINS -->
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>2.3.2</version>
					<configuration>
						<findbugsXmlOutput>true</findbugsXmlOutput>
						<failOnError>false</failOnError>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.3</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>${project.build.directory}/src-gen</source>
								</sources>
								<sources>
									<source>${project.build.directory}/xtend-gen</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.dash.maven</groupId>
					<artifactId>eclipse-signing-maven-plugin</artifactId>
					<version>1.0.5</version>
				</plugin>
				<plugin>
					<groupId>org.fornax.toolsupport</groupId>
					<artifactId>fornax-oaw-m2-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>2.3.1</version>
					<configuration>
						<!-- need to prefix by basedir to generate to currently built module -->
						<outputDirectory>${basedir}/xtend-gen</outputDirectory>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<pluginRepositories>	
		<!--pluginRepository>			
			<id>tycho-0.14.0-staged</id>
			<url>https://oss.sonatype.org/content/repositories/orgeclipsetycho-004/</url>
		</pluginRepository-->		
		<pluginRepository>
			<id>sonatype</id>
			<url>http://repository.sonatype.org/content/groups/sonatype-public-grid/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</pluginRepository>
		<!-- Fornax Workflow Runner plugin -->
		<pluginRepository>
			<id>fornax</id>
			<url>http://www.fornax-platform.org/m2/repository</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
		<pluginRepository>
			<id>xtend</id>
			<url>http://build.eclipse.org/common/xtend/maven/</url>
		</pluginRepository>
	</pluginRepositories>

	<repositories>
		<repository>
			<id>maven.eclipse.org</id>
			<url>http://maven.eclipse.org/nexus/content/groups/public/</url>
		</repository>
		<repository>
			<id>xtend</id>
			<url>http://build.eclipse.org/common/xtend/maven/</url>
		</repository>
		<repository>
			<id>indigo</id>
			<layout>p2</layout>
			<url>http://download.eclipse.org/releases/${platform-version-name}</url>
		</repository>
		<repository>
			<id>itemis2</id>
			<layout>p2</layout>
			<url>http://download.itemis.com/updates/milestones/</url>
		</repository>
		<repository>
			<id>itemis</id>
			<layout>p2</layout>
			<url>http://download.itemis.de/updates/</url>
		</repository>
		<repository>
			<id>dbus-emf-model-repo</id>
			<layout>p2</layout>
			<url>http://dbus-emf-model.eclipselabs.org.codespot.com/git/update_site/releases/</url>
		</repository>
		<repository>
			<id>xtext-utils-repo</id>
			<layout>p2</layout>
			<url>http://xtext-utils.eclipselabs.org.codespot.com/git.distribution/releases/unittesting-0.9.x/</url>
		</repository>
	</repositories>			

	<!-- 
    <profiles>
        <profile>
            <id>local-build</id>
            <activation>
                <property>
                    <name>local-build</name>
                </property>
            </activation>
            <repositories>
                <repository>
                    <id>franca-dependencies</id>
                    <layout>p2</layout>
                    <url>file:../../releng/org.franca.repository/target/repository</url>
                </repository>
            </repositories>
        </profile>
		<profile>
			<id>remote-build-release</id>
			<activation>
				<property>
					<name>remote-build-release</name>
				</property>
			</activation>			
			<repositories>
				<repository>
					<id>franca-dependencies</id>
					<layout>p2</layout>
					<url>http://franca.eclipselabs.org.codespot.com/git.distribution/releases/</url>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.sonatype.tycho</groupId>
						<artifactId>maven-osgi-packaging-plugin</artifactId>
						<configuration>
							<strictVersions>false</strictVersions>
						</configuration>
					</plugin>
					<plugin>
						<artifactId>maven-scm-plugin</artifactId>
						<configuration>
							<basedir>${basedir}</basedir>
							<includes>${basedir}/../feature/feature.xml,${basedir}/../site/site.xml,${basedir}/repository/category.xml</includes>
							<message>[maven-release-plugin] prepare release of OSGI artifacts</message>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>skip-ui-tests</id>
			<activation>
				<property>
					<name>skip-ui-tests</name>
				</property>
			</activation>
			<properties>
				<tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest>
			</properties>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>mac os x</name>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m -XstartOnFirstThread</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<name>not-mac</name>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-Xmx512m -XX:MaxPermSize=256m</ui.test.vmargs>
			</properties>
		</profile>
	</profiles>
	-->


	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>${slf4j-version}</version>
				<scope>compile</scope>
			</dependency>
			<!--Binding for log4j version 1.2.x You also need to place log4j.jar on your class path. -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-log4j12</artifactId>
				<version>${slf4j-version}</version>
			</dependency>
			<dependency>
				<groupId>log4j</groupId>
				<artifactId>log4j</artifactId>
				<version>1.2.16</version>
				<scope>runtime</scope>
			</dependency>
			<!--Binding for commons logging over slf4j -->
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>jcl-over-slf4j</artifactId>
				<version>${slf4j-version}</version>
				<scope>runtime</scope>
			</dependency>			
		</dependencies>
	</dependencyManagement>

	<licenses>
		<license>
			<name>Eclipse Public License v1.0</name>
			<comments>
       All rights reserved.

       This program and the accompanying materials are made
       available under the terms of the Eclipse Public License v1.0
       which accompanies this distribution, and is available at
       http://www.eclipse.org/legal/epl-v10.htm
      </comments>
		</license>
	</licenses>

	<description>Franca IDL is a textual language which allows to define software interfaces and APIs in a consistent, user-friendly way. Franca includes a framework for IDL transformation and building code generators from API specifications.</description>
	<url>http://code.google.com/a/eclipselabs.org/TODO</url>
	<inceptionYear>2012</inceptionYear>
	<issueManagement>
		<system>GoogleCode Issue Tracker</system>
		<url>http://code.google.com/a/eclipselabs.org/p/franca/issues/list</url>
	</issueManagement>
	<organization>
		<name>Eclipselabs</name>
		<url>http://code.google.com/a/eclipselabs.org/hosting/</url>
	</organization>
	<scm>
		<developerConnection>https://code.google.com/a/eclipselabs.org/franca</developerConnection>
		<url>https://code.google.com/a/eclipselabs.org/franca</url>
		<connection>https://code.google.com/a/eclipselabs.org/franca</connection>
	</scm>
	<ciManagement>
		<system>Cloudbees Jenkins</system>
		<url>https://nanosite.ci.cloudbees.com/job/Franca-main/</url>
	</ciManagement>
</project>